Bug 216316 - "Icon view font" setting does not work.
Summary: "Icon view font" setting does not work.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-IconView (other bugs)
Version First Reported In: 1.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-26 22:19 UTC by pochini
Modified: 2017-07-29 05:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pochini 2009-11-26 22:19:59 UTC
Version:           1.0.0-beta6 (using KDE 4.3.3)
Compiler:          gcc (GCC) 4.1.2 (Gentoo 4.1.2 p1.0.2) powerpc
OS:                Linux
Installed from:    Compiled From Sources

Settings menu/Configure digikam/Album view/Icon view font: this setting has no effect.
Comment 1 Andi Clemens 2009-11-26 22:24:16 UTC
Yes, confirmed...
Comment 2 Marcel Wiesweg 2009-11-27 23:03:29 UTC
SVN commit 1055389 by mwiesweg:

Take font setting into account for icon view

BUG: 216316

 M  +2 -1      NEWS  
 M  +1 -0      digikam/digikamimageview.cpp  
 M  +1 -0      digikam/imagedelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1055389
Comment 3 DGardner 2009-12-14 15:36:57 UTC
This works for me in 1.0.0-rc1: I can change the font and the file names,
etc. under the thumbnails are updated, but there are still bugs.

In the settings dialog, I change the "Icon View font" drop-down list
selection from "System Font" to "Custom Font" and then hit "Choose...".
I can then change the font and it is reflected in the font used for the
drop-down list (i.e., "Custom Font" appears in the custom font). However,
if I hit "Choose..." again, the font selection dialog defaults to the
system font, and not my chosen custom font. This makes it hard to go back
and just tweak the font size, as I have to select the custom font and the
font style and the font size every time.
Comment 4 Marcel Wiesweg 2009-12-15 17:45:47 UTC
SVN commit 1062674 by mwiesweg:

Start dialog with previously selected font

CCBUG: 216316

 M  +3 -3      dfontselect.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1062674
Comment 5 DGardner 2009-12-15 18:08:13 UTC
I'm not sure if your recent fix will also fix this, but if I exit
digiKam (RC1) and start it again, the icon font setting reverts
back to the default even though "Custom Font" still appears as
the selected option.
Comment 6 Marcel Wiesweg 2009-12-15 18:39:42 UTC
SVN commit 1062691 by mwiesweg:

Read font settings at startup as well

CCBUG: 216316

 M  +2 -0      digikamimageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1062691