Take font setting into account for icon view

BUG: 216316

svn path=/trunk/extragear/graphics/digikam/; revision=1055389